Finalized hyprland keybindings

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ $fileManager = nautilus
 $menu = sysmenu
 $mail = mailspring --password-store="gnome-libsecret"
 $power = syspower
-$resizeSpd = 5%
+$resizeSpd = 10%
 $mainMonitor = eDP-1
 $IDE = neovide
 $browser = firefox
@@ -101,7 +101,7 @@ general {
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
@@ -111,12 +111,12 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 1.0
+    inactive_opacity = 0.9
 
     shadow {
         enabled = true
-        range = 4
-        render_power = 3
+        range = 10
+        render_power = 5
         color = rgba(1a1a1aee)
     }
 
@@ -126,7 +126,7 @@ decoration {
         size = 3
         passes = 1
 
-        vibrancy = 0.1696
+        vibrancy = 0.2696
     }
 }
 
@@ -237,13 +237,20 @@ bind = $mainMod, P, exec, $terminal
 bind = $mainMod, C, killactive,
 bind = $mainMod CTRL, M, exit,
 bind = $mainMod, E, exec, $fileManager
+
+# float and pin window
 bind = $mainMod, F, togglefloating,
+bind = $mainMod, F, pin,
+bind = $mainMod CTRL, F, cyclenext,
+
+bind = ,F11, fullscreen
+
 bind = $mainMod, SPACE, execr, $menu
 bind = ALT, SPACE, execr, $menu
 bind = $mainMod, M, execr, $mail
 bind = $mainMod CTRL, P, execr, $power
-# bind = $mainMod, P, pseudo, # dwindle
-# bind = $mainMod, z, togglesplit, # dwindle
+bind = $mainMod CTRL, v, pseudo, # dwindle
+bind = $mainMod, v, togglesplit, # dwindle
 bind = CTRL SHIFT, PRINT, exec, hyprshot -m output # Full Screen Screenshot
 bind = CTRL, PRINT, exec, hyprshot -m window # Window Screenshot
 bind = , PRINT, exec, hyprshot -m region # Window Screenshot
@@ -263,8 +270,8 @@ bind = $mainMod SHIFT, j, movewindow, d
 # Swapping Windows
 bind = $mainMod CTRL, h, resizeactive, -$resizeSpd 0
 bind = $mainMod CTRL, l, resizeactive, $resizeSpd 0
-bind = $mainMod CTRL, k, resizeactive, 0 $resizeSpd
-bind = $mainMod CTRL, j, resizeactive, 0 -$resizeSpd
+bind = $mainMod CTRL, k, resizeactive, 0 -$resizeSpd
+bind = $mainMod CTRL, j, resizeactive, 0 $resizeSpd
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -282,6 +289,8 @@ bind = $mainMod, o, workspace, e+1
 bind = $mainMod, i, workspace, e-1
 bind = $mainMod CTRL, o, workspace, +1
 bind = $mainMod CTRL, i, workspace, -1
+bind = $mainMod SHIFT, o, movetoworkspace, +1
+bind = $mainMod SHIFT, i, movetoworkspace, -1
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
