--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,6 +67,7 @@ execr = "syshud"
 exec-once = "swww-daemon"
 exec-once = "swww img ~/.wallpapers/mountain.gif"
 execr-once = "kitty sudo kanata -c ~/.config/kanata/config.kbd"
+exec-once = "systemctl enable --now auto-cpufreq"
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -111,7 +112,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.9
+    inactive_opacity = 0.8
 
     shadow {
         enabled = true
