--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -47,6 +47,8 @@ $mainMonitor = eDP-1
 $IDE = neovide
 $browser = firefox
 $discord = vesktop
+$restartAshell = "pkill ashell ; ashell"
+$taskManager = missioncenter
 
 #################
 ### AUTOSTART ###
